[TEST] JaCoCo plugin for test coverage